test/conformance/chainsaw/mutating-policies/existing/skip-background-requests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mpol-skip-background-ns
  labels:
    test: enabled
