test/conformance/chainsaw/mutating-policies/existing/skip-background-requests/configmap-mutated-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: target-cm
  namespace: mpol-skip-background-ns
  labels:
    bgmutated: "true"
